@@ -1,5 +1,8 @@
 2009-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* haskell-indent.el (haskell-indent-thenelse): New var.
+	(haskell-indent-closing-keyword): Use it.
+
 	* haskell-decl-scan.el (haskell-ds-generic-find-next-decl):
 	Accept qualified import names.
 
